--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <p class="form--header-text">Tell us more about your social account.</p>
         </div>
         <input type="text" placeholder="Phone Number" />
-        <button class="form__btn" id="btn-3">Submit</button>
+        <button class="form__btn" id="btn-3">Submit pl</button>
       </form>
       <div class="form--message"></div>
     </main>
